Update: fix divider margins on mobile landing page

--- a/src/scss/landingpage.scss
+++ b/src/scss/landingpage.scss
@@ -201,6 +201,10 @@
       .headline {
         margin-top: 1em;
 
+        .divider {
+          margin: 1em 0 2em 0;
+        }
+
         .landing-button {
           min-width: 500px;
         }
